# bspQA

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  document.md  main.py  pyproject.toml  render.yaml
backend/: .env.example
backend/app/: config.py  main.py
backend/app/api/routes/: router.py
backend/app/observability/: __init__.py  logging.py  tracing.py
backend/app/rag/: generator.py  pipeline.py  retriever.py
evals/: EVALS.md  eval_set.json  run_evals.py  scoring.py
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: QAWidget.tsx
ingestion/: chunk_and_embed.py  fetch_from_manifest.py  manifest.json  parse_pdfs.py
tests/: test_chunk_and_embed_collection_env.py  test_rag_pipeline.py
