[project]
name = "bspqa"
version = "0.1.0"
description = "RAG-powered Q&A over Bangko Sentral ng Pilipinas Monetary Policy and Inflation Reports. Ask questions about Philippine inflation, interest rates, and economic outlook, and get cited, sourced answers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
