[project]
name = "bspqa"
version = "0.1.0"
description = "RAG-powered Q&A over Bangko Sentral ng Pilipinas Monetary Policy and Inflation Reports. Ask questions about Philippine inflation, interest rates, and economic outlook, and get cited, sourced answers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fitz>=0.0.1.dev2",
    "ipykernel>=7.2.0",
    "markitdown[az-doc-intel,pdf]>=0.1.5",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.17.1",
    "tiktoken>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
